# congenial-retrieve

./: .gitignore  Cargo.toml  README.md  Terraform.tf  build_script.sh
src/: command.rs  lambda_gateway.rs  main.rs
src/telegram/: action.rs  api.rs  command.rs  handler.rs  inbound.rs  mod.rs  outbound.rs  update_handler.rs
tbot-lambda/: Cargo.toml
tbot-lambda/src/: lambda_gateway.rs  main.rs
tbot-lambda/src/telegram/: inbound.rs
terraform/: api-gateway.tf  aws-main.tf  cloudwatch.tf  dynamo-db.tf  lambda.tf  others.tf  terraform.tf
